fix footer gap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,7 +45,7 @@ body {
   color: white;
   /* font-family: -apple-system, BlinkMacSystemFont, "Russo One", "Montserrat",
     sans-serif; */
-  font-family: -apple-system, BlinkMacSystemFont, "Montserrat", sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 h1 {
   font-family: "Russo One", sans-serif;
@@ -603,7 +603,7 @@ body._lock {
   /* background-color: red; */
 }
 .section__title {
-  font-family: -apple-system, BlinkMacSystemFont, "Russo One", sans-serif;
+  font-family: "Russo One", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 52px;
@@ -863,7 +863,7 @@ ul.accordion-list {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 22px;
+  /* gap: 22px; */
   position: relative;
   /* min-width: 327px; */
   width: 100%;
@@ -902,6 +902,9 @@ ul.accordion-list li {
   cursor: pointer;
   /* transition: all 0.3s ease-in-out; */
   transition: all 0.5s;
+}
+ul.accordion-list li:not(:last-child) {
+  margin-bottom: 22px;
 }
 ul.accordion-list li:last-child {
   /* margin-bottom: 0%; */
@@ -995,11 +998,14 @@ ul.accordion-list li div.answer p {
     padding-bottom: 90px;
   }
   ul.accordion-list {
-    gap: 12px;
+    /* gap: 12px; */
   }
   ul.accordion-list li {
     padding: 16px;
     border-radius: 12px;
+  }
+  ul.accordion-list li:not(:last-child) {
+    margin-bottom: 12px;
   }
   ul.accordion-list li h3 {
     font-size: 15px;
@@ -1067,9 +1073,12 @@ ul.accordion-list li div.answer p {
 .footer__social {
   /* background-color: coral; */
   display: flex;
-  gap: 16px;
+  /* gap: 16px; */
   flex-direction: row;
   align-items: center;
+}
+.footer__social a:not(:last-child) {
+  margin-right: 16px;
 }
 .footer__social-link {
   /* background-color: green; */
@@ -1148,6 +1157,9 @@ ul.accordion-list li div.answer p {
   .footer__phone a {
     font-size: 11px;
     line-height: 13px;
+  }
+  .footer__social a:not(:last-child) {
+    margin-right: 10px;
   }
   .footer__social-link {
     width: 32px;
